# iagitup

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  TODO  archive_watchlist.py  iagitup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
iagitup/: __init__.py  __main__.py  archive_watchlist.py  iagitup.py
tests/: test_archive_watchlist.py  test_iagitup.py
